# ChangeLog for net-im/psi-historykeeper
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru> ChangeLog:
  create ChangeLog
