@@ -1,3 +1,5 @@
+DIST psi-historykeeper-0.0.5_pre3076.tar.xz 4200 RMD160 7b00a5591c4b6d12322e3e4ea5039dd162bc1a76 SHA1 caf4fbe7faab03995b4ebdd907b1faf3f9a73bd3 SHA256 9a46bc2a5f721d5d36ffd0e6e77e493e4503493adf6b3b6456447c3926d2e700
+EBUILD psi-historykeeper-0.0.5_pre3076.ebuild 249 RMD160 d1def48bec034c6b61b4588f6abfe40aa2c7b16a SHA1 17db17ca8a9f6afc2020cbea64f4bf713906ce28 SHA256 f9ed44da6ded45553803f8f722cf20143f051079c063ca3c793512412705a44b
 EBUILD psi-historykeeper-9999.ebuild 240 RMD160 0034a1adc4a83dfb24ca835d6a1e9365d92c5e9b SHA1 6f8445a06a1ccebbf52de4da5a3241c293302368 SHA256 c13a6d8a98e1798ca78546b554387f265bad3ba9141aadd340ce92baeb76cdc8
-MISC ChangeLog 209 RMD160 443863857e6c1db01a3d250a9f31587d8560461f SHA1 42452bd31dcef314905367454bd4b5fada5cb431 SHA256 b5e64a44db2db6174d10ee383deb6d0fe2ce6ee2339ff33290782ec8162703b7
+MISC ChangeLog 311 RMD160 96b2299cb5f4cdb24f15405cda967cb5d1191234 SHA1 d41bd5429edde3296991fb268d98cfd57348eb65 SHA256 43d24986daf2f75dcc239f7ad87f78c8087b837fdda8a1f9113bfb66895582e9
 MISC metadata.xml 369 RMD160 5dd7a23847ba3b5b617c88ec077381dfaff65769 SHA1 3d04b4e66057126afb9a41d3559bab56caf992b5 SHA256 44a3f74a1bf0fd7b072f22e1fa0d9c5f80acbc982f72ef88ed0153dc127c0c4c
